# SSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSS

./: .env.testing  .gitignore  docker-compose.yml  init_db.py  pyproject.toml  requirements.txt  run.sh
.github/workflows/: python-app.yml  server.yml
app/: main.py
client/: .env  package-lock.json  package.json
client/src/: App.tsx  api.ts
client/src/components/: expandable_text.component.tsx  feed.component.tsx  post.component.tsx  signup.component.tsx
client/src/contexts/: auth.context.tsx
client/src/pages/: board.page.tsx  home.page.tsx
server/: .env.testing  docker-compose.yml  pyproject.toml
server/src/: main.py
server/src/alembic/: env.py
server/src/alembic/versions/: 3aa8a9c9ae33_create_users_table.py
server/src/api/v1/: __init__.py
server/src/api/v1/auth/: dependencies.py  endpoints.py  repository.py  schemas.py  service.py
server/src/api/v1/health/: endpoints.py  schemas.py
server/src/api/v1/postponed/: endpoints.py
server/src/api/v1/user/: endpoints.py  repository.py  schemas.py  service.py
server/src/api/v1/vk/: endpoints.py  schemas.py  service.py
server/src/core/: config.py  constants.py  database.py  exception_handlers.py  exceptions.py  logger.py  models.py  repository.py  security.py  setup.py  utilities.py
server/src/dependencies/: file.py
server/src/models/: __init__.py  auth_session.py  postponed.py  user.py
server/src/schemas/: file.py
server/tests/: conftest.py  test_auth.py  test_general.py
server/tests/fixtures/: base.py  database.py  faker.py
src/alembic/: env.py
src/alembic/versions/: e43c1273e1a3_create_users_table.py
src/app/: main.py
src/app/core/: config.py  database.py  security.py  setup.py
src/app/models/: user.py
src/front/: package-lock.json  package.json  vite.config.ts
src/front/src/: App.tsx
src/scripts/: init_db.py
src/server/: middlewares.py  redis.py
src/server/core/: config.py  database.py  enums.py  exception_handlers.py  exceptions.py  (+6 more)
tests/: conftest.py  test_auth.py  test_database.py  test_general.py  test_password.py  test_user.py
tests/fixtures/: __init__.py  base.py  database.py
(+22 files in other folders)
