[project]
name = "manyS"
version = "0.0.1"
description = ""
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bcrypt>=5.0.0",
    "fastapi>=0.123.0",
    "httpx>=0.28.1",
    "pydantic[email]>=2.12.5",
    "pydantic-settings>=2.12.0",
    "sqlalchemy>=2.0.44",
    "psycopg[binary]>=3.2.13",
    "uuid6>=2025.0.1",
    "alembic>=1.17.2",
]

[dependency-groups]
dev = [
    "basedpyright>=1.34.0",
    "flake8>=7.3.0",
    "mypy>=1.19.0",
    "pytest>=9.0.1",
    "uvicorn>=0.38.0",
]
